--- a/windows terminal/settings.json
+++ b/windows terminal/settings.json
@@ -1,7 +1,12 @@
 {
     "$schema": "https://aka.ms/terminal-profiles-schema",
 
-    "defaultProfile": "{61c54bbd-c2c6-5271-96e7-009a87ff44bf}",
+    "defaultProfile": "{88888888-8888-8888-8888-888888888888}",
+
+    //default size
+    "initialRows": 27,
+    "initialCols": 137,
+
     "copyOnSelect": false,
     "copyFormatting": false,
     "profiles":
@@ -13,52 +18,52 @@
         "list":
         [
             {
-                "guid": "{61c54bbd-c2c6-5271-96e7-009a87ff44bf}",
-                "name": "Windows PowerShell",
-                "commandline": "powershell.exe",
-                "hidden": false
-            },
-            {
-                "guid": "{0caa0dad-35be-5f56-a8ff-afceeeaa6101}",
+                "guid": "{99999999-9999-9999-9999-999999999999}",
                 "name": "命令提示符",
                 "commandline": "cmd.exe",
                 "hidden": false
             },
             {
-                "guid": "{07b52e3e-de2c-5db4-bd2d-ba144ed6c273}",
+                "guid": "{88888888-8888-8888-8888-888888888888}",
+                "name": "Windows PowerShell",
+                "commandline": "powershell.exe",
+                "hidden": false
+            },
+            {
+                "guid": "{77777777-7777-7777-7777-777777777777}",
                 "hidden": false,
                 "name": "Ubuntu-20.04",
                 "source": "Windows.Terminal.Wsl"
             },
             {
-                "guid": "{b453ae62-4e3d-5e58-b989-0a998ec441b8}",
+                "guid": "{66666666-6666-6666-6666-666666666666}",
                 "hidden": false,
                 "name": "Azure Cloud Shell",
                 "source": "Windows.Terminal.Azure"
             },
             {
-                "guid": "{b453ae62-4e3d-5e58-b989-000000000000}",
+                "guid": "{00000000-0000-0000-0000-000000000000}",
                 "hidden": false,
                 "name": "OpenWrt",
                 "icon": "%LOCALAPPDATA%/terminal/openwrt.png",
                 "commandline": "powershell.exe ssh root@10.10.10.01"
             },
             {
-                "guid": "{b453ae62-4e3d-5e58-b989-000000000001}",
+                "guid": "{00000000-0000-0000-0000-000000000001}",
                 "hidden": false,
                 "name": "RespberryPi 4B",
                 "icon": "%LOCALAPPDATA%/terminal/raspberry.ico",
                 "commandline": "powershell.exe ssh pi@10.10.10.10"
             },
             {
-                "guid": "{b453ae62-4e3d-5e58-b989-000000000002}",
+                "guid": "{00000000-0000-0000-0000-000000000002}",
                 "hidden": false,
                 "name": "RespberryPi Zero W",
                 "icon": "%LOCALAPPDATA%/terminal/raspberry.ico",
                 "commandline": "powershell.exe ssh pi@10.10.10.12"
             },
             {
-                "guid": "{b453ae62-4e3d-5e58-b989-000000000003}",
+                "guid": "{00000000-0000-0000-0000-000000000003}",
                 "hidden": false,
                 "name": "Aliyun",
                 "icon": "%LOCALAPPDATA%/terminal/aliyun.ico",
